@@ -1,3 +1,8 @@
+Tue Apr  6 12:40:12 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Servants/Connector_Servant_Impl_Base.cpp (get_facet_executor):
+          Throw an exception as default, see 6.4.3.3 from the CCM spec
+
 Tue Apr  6 11:19:12 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Containers/Session/Session_Container.cpp:
